# stravaminatorV6

./: .cproject  .gitignore  .project  CMakeLists.txt  MK64FN1M0xxx12_flash.ld  Power.xml  ProjectGeneration.gen  Readme.md  build_all.bat  build_all.sh  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  myStrava.Doxyfile  myStrava2.mex
board/: RTE_Device.h  board.c  board.h  clock_config.c  clock_config.h  pin_mux.c  pin_mux.h
debug/: makefile  objects.mk
debug/CMSIS/: subdir.mk
debug/drivers/: subdir.mk
drivers/: fsl_dspi_cmsis.c  fsl_dspi_cmsis.h  fsl_fxos.c  fsl_fxos.h  fsl_i2c_edma.c  fsl_sdhc.c  fsl_uart_cmsis.c  fsl_uart_cmsis.h
drivers/i2c/: dma_i2c0.c  dma_i2c0.h  int_i2c0.c  int_i2c0.h
drivers/lcd/: ls027.c  ls027.h
drivers/spi/: dma_spi0.c  dma_spi0.h  spi.c  spi.h
drivers/uart/: dma_uart0.c  int_uart0.c  uart0.c  uart0.h  uart2.c  uart2.h
drivers/xfer/: xfer_manager.h
libraries/AdafruitGFX/: Adafruit_GFX.cpp  Adafruit_GFX.h  Print.cpp  WString.cpp  WString.h
libraries/GlobalTop/: LocusCommands.h  MTK.cpp
libraries/Nordic/: Nordic.cpp  Nordic.h
libraries/TinyGPSPlus/: TinyGPS++.cpp  TinyGPS++.h
libraries/rtt/: SEGGER_RTT.c  SEGGER_RTT_Conf.h
libraries/spi/: spi.c
libraries/sysview/: SEGGER_SYSVIEW_Conf.h
libraries/utils/: RingBuffer.h  SeggerDisplay.cpp  SeggerDisplay.h  WString.h  millis.c  millis.h  new.cpp  new.h  segger_wrapper.c  segger_wrapper.h  utils.c  utils.h
settings/: myStrava2_frdmk64f debug cmsisdap.launch  myStrava2_frdmk64f debug jlink.launch  myStrava2_frdmk64f debug pne.launch  myStrava2_frdmk64f release cmsisdap.launch  myStrava2_frdmk64f release jlink.launch  myStrava2_frdmk64f release pne.launch
source/: FreeRTOSConfig.h  Model.cpp  Model.h  main.cpp  parameters.h
source/display/: DebugDisplay.cpp  DebugDisplay.h  Zoom.cpp  Zoom.h
source/model/: Attitude.cpp  Attitude.h  Boucle.cpp  Boucle.h  BoucleCRS.cpp  BoucleCRS.h  BoucleFEC.cpp  BoucleFEC.h  BoucleInterface.h  Cadence.cpp  Cadence.h  Locator.cpp  Locator.h  Sensor.cpp  Sensor.h  UData.h  nrf52.cpp  nrf52.h
source/parsers/: UAParser.cpp  UAParser.h  file_parser.cpp  mk64f_parser.h  spis_pages.c  spis_pages.h  usb_parser.cpp  usb_parser.h
source/power/: PowerManager.cpp  PowerManager.h  power_manager.c  power_manager.h
source/routes/: ListePoints.cpp  ListePoints.h  Parcours.cpp  Parcours.h  Points.cpp  Points.h  Segment.cpp  Segment.h  Vecteur.h  WString.cpp  utils.h
source/scheduling/: i2c_scheduler.cpp  spi_scheduler.c  spi_scheduler.h
source/sd/: disk_sdcard.c  ffconf.h  fsl_host.c  fsl_sdmmc_host.c  sd_functions.cpp  sd_functions.h  sdcard_fatfs.c  sdcard_fatfs.h
source/sensors/: Cadence.h  GPSMGMT.cpp  GPSMGMT.h  HRM.h  MS5637.cpp  STC3100.cpp  STC3100.h  VEML6075.cpp  button.c  button.h  fxos.cpp  fxos.h
source/usb/: composite.c  composite.h  composite_public.h  disk_sdcard.c  disk_sdcard.h  usb_device_cdc_acm.c  usb_device_cdc_acm.h  usb_device_ch9.c  usb_device_ch9.h  usb_device_class.c  usb_device_class.h  usb_device_config.h  usb_device_descriptor.c  usb_device_descriptor.h  usb_device_msc.c  usb_device_msc.h  usb_device_msc_ufi.c  usb_device_msc_ufi.h  virtual_com.c  virtual_com.h
source/vue/: Menuable.cpp  Menuable.h  Notif.h  Screenutils.cpp  Screenutils.h  Vue.cpp  Vue.h  VueCRS.cpp  VueCRS.h  VueCommon.h  VueFEC.cpp  VueFEC.h  VuePRC.cpp  VuePRC.h
utilities/: fsl_debug_console.c
